# Vaderboard-admin

./: '  .gitignore  .sample_env  Cargo.toml  Dockerfile  README.md  build.rs  build.sh  docker-compose.yml  flake.nix  nginx.conf  package-lock.json  recipe.json  remote.sh  test.sql  vaderboard.db-shm  vaderboard.db-wal
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/workflows/: deploy.yml  rust.yml  vader.yml
migrations/: 20230517183954_vader-init.down.sql  20230517183954_vader-init.up.sql
src/: main.rs
src/handlers/: command_handlers.rs  db_handlers.rs  event_handlers.rs  mod.rs  query_handlers.rs
src/models/: command_models.rs  error_models.rs  handler_models.rs  mod.rs  query_models.rs  v_models.rs  wrapper_models.rs
src/services/: db_services.rs  event_services.rs  mod.rs  query_services.rs  v_middlewares.rs  vb_services.rs
vader-admin-ui/: .env.production  .sample_env  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1685460863098-fb285a288924f.mjs
vader-admin-ui/src/: App.tsx  Types.ts  main.tsx
vader-admin-ui/src/components/: EventFactory.tsx  EventList.tsx  TeamEvent.tsx  TeamList.tsx  UserEvent.tsx  UserList.tsx
vader-admin-ui/src/pages/: AddEvent.tsx  AddTeam.tsx  AddTeamMember.tsx  AddUser.tsx  Event.tsx  Home.tsx  Login.css  Login.tsx
vader-admin-ui/src/utils/: ApiUtils.ts  apiUtils.ts
vb_test/: vboard.html
