[package]
name = "vader-admin"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-actix-native-tls"] }
sqlx-migrate = "0.6.0"
serde = { version = "1.0.163", features = ['derive'] }
serde_json = "1.0.96"
log = "0.4.17"
env_logger = "0.10.0"
dotenvy = "0.15.7"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
futures = "0.3.28"
erased-serde = "0.3.25"
tokio = { version = "1.28.1", features = ["full"] }

[build-dependencies]
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-actix-native-tls"] }
tokio = { version = "1.28.1", features = ["full"] }
dotenvy = "0.15.7"
