[package]
name = "vader-admin"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "^4.3"
sqlx = { version = "^0.6", features = [
  "sqlite",
  "runtime-actix-native-tls",
  "chrono",
] }
serde = { version = "^1.0", features = ['derive'] }
serde_json = "^1.0"
serde_repr = "^0.1"
log = "^0.4"
env_logger = "^0.10"
dotenvy = "^0.15"
uuid = { version = "^1.4", features = ["v4", "serde"] }
futures = "^0.3"
# erased-serde = "0.3"
tokio = { version = "^1.29", features = ["full"] }
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-files = "^0.6"
bcrypt = "^0.14"
actix-web-actors = "^4.2"
actix = "0.13"
actix-cors = "0.6"
chrono = "^0.4"

[build-dependencies]
sqlx = { version = "^0.6", features = ["sqlite", "runtime-actix-native-tls"] }
tokio = { version = "^1.29", features = ["full"] }
dotenvy = "^0.15"
bcrypt = "^0.14"
